--- a/seleniumFramework-master/test-output/old/Default suite/classes.html
+++ b/seleniumFramework-master/test-output/old/Default suite/classes.html
@@ -4,22 +4,37 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>runner.TestRunner</td>
+<td>tests.MyAccountPT</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>feature</td>
-<td>cucumber </td>
-</tr>
+<td>RegisteredUserCanChangePassword</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>RegisteredUserCanLogin</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>UserCanRegisterSuccssfully</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>RegisteredUserCanLogout</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>UserLogout</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>setUpClass</td>
+<td>setUp</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
@@ -36,6 +51,6 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>tearDownClass</td>
+<td>stopDriver</td>
 <td>&nbsp;</td></tr>
 </table>
