--- a/seleniumFramework-master/test-output/old/Default suite/methods.html
+++ b/seleniumFramework-master/test-output/old/Default suite/methods.html
@@ -1,20 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6776cb">  <td>21/09/02 15:42:14</td>   <td>0</td> <td title="&gt;&gt;TestBase.startDriver(java.lang.String)[pri:0, instance:runner.TestRunner@4ddbbdf8]">&gt;&gt;startDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1414549197</td>   <td></td> </tr>
-<tr bgcolor="81aa60">  <td>21/09/02 15:42:18</td>   <td>3184</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:runner.TestRunner@4ddbbdf8]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1414549197</td>   <td></td> </tr>
-<tr bgcolor="81aa60">  <td>21/09/02 15:42:18</td>   <td>3480</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:runner.TestRunner@4ddbbdf8]">feature</td> 
-  <td>main@1414549197</td>   <td></td> </tr>
-<tr bgcolor="6776cb">  <td>21/09/02 15:42:18</td>   <td>3632</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.screenshotOnFailure(org.testng.ITestResult)[pri:0, instance:runner.TestRunner@4ddbbdf8]">&lt;&lt;screenshotOnFailure</td> 
-<td>&nbsp;</td>  <td>main@1414549197</td>   <td></td> </tr>
-<tr bgcolor="81aa60">  <td>21/09/02 15:42:18</td>   <td>3893</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:runner.TestRunner@4ddbbdf8]">feature</td> 
-  <td>main@1414549197</td>   <td></td> </tr>
-<tr bgcolor="6776cb">  <td>21/09/02 15:42:18</td>   <td>3909</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.screenshotOnFailure(org.testng.ITestResult)[pri:0, instance:runner.TestRunner@4ddbbdf8]">&lt;&lt;screenshotOnFailure</td> 
-<td>&nbsp;</td>  <td>main@1414549197</td>   <td></td> </tr>
-<tr bgcolor="81aa60">  <td>21/09/02 15:42:19</td>   <td>4130</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:runner.TestRunner@4ddbbdf8]">&lt;&lt;tearDownClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1414549197</td>   <td></td> </tr>
-<tr bgcolor="6776cb">  <td>21/09/02 15:42:19</td>   <td>4186</td> <td title="&lt;&lt;TestBase.stopDriver()[pri:0, instance:runner.TestRunner@4ddbbdf8]">&lt;&lt;stopDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1414549197</td>   <td></td> </tr>
+<tr bgcolor="91ef70">  <td>21/09/09 17:35:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase2.screenshotOnFailure(org.testng.ITestResult)[pri:0, instance:tests.MyAccountPT@1b1426f4]">&lt;&lt;screenshotOnFailure</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="91ef70">  <td>21/09/09 17:35:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase2.screenshotOnFailure(org.testng.ITestResult)[pri:0, instance:tests.MyAccountPT@1b1426f4]">&lt;&lt;screenshotOnFailure</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="91ef70">  <td>21/09/09 17:35:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase2.screenshotOnFailure(org.testng.ITestResult)[pri:0, instance:tests.MyAccountPT@1b1426f4]">&lt;&lt;screenshotOnFailure</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="91ef70">  <td>21/09/09 17:35:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase2.screenshotOnFailure(org.testng.ITestResult)[pri:0, instance:tests.MyAccountPT@1b1426f4]">&lt;&lt;screenshotOnFailure</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="d88769">  <td>21/09/09 17:35:33</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyAccountPT.UserLogout()[pri:5, instance:tests.MyAccountPT@1b1426f4]">UserLogout</td> 
+  <td>main@1450652220</td>   <td></td> </tr>
+<tr bgcolor="d88769">  <td>21/09/09 17:35:33</td>   <td>-23</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyAccountPT.UserCanRegisterSuccssfully()[pri:1, instance:tests.MyAccountPT@1b1426f4]">UserCanRegisterSuccssfully</td> 
+  <td>main@1450652220</td>   <td></td> </tr>
+<tr bgcolor="91ef70">  <td>21/09/09 17:35:33</td>   <td>1</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase2.stopDriver()[pri:0, instance:tests.MyAccountPT@1b1426f4]">&lt;&lt;stopDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="91ef70">  <td>21/09/09 17:35:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase2.screenshotOnFailure(org.testng.ITestResult)[pri:0, instance:tests.MyAccountPT@1b1426f4]">&lt;&lt;screenshotOnFailure</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="d88769">  <td>21/09/09 17:35:33</td>   <td>-15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyAccountPT.RegisteredUserCanChangePassword()[pri:2, instance:tests.MyAccountPT@1b1426f4]">RegisteredUserCanChangePassword</td> 
+  <td>main@1450652220</td>   <td></td> </tr>
+<tr bgcolor="d88769">  <td>21/09/09 17:35:33</td>   <td>-11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyAccountPT.RegisteredUserCanLogout()[pri:3, instance:tests.MyAccountPT@1b1426f4]">RegisteredUserCanLogout</td> 
+  <td>main@1450652220</td>   <td></td> </tr>
+<tr bgcolor="91ef70">  <td>21/09/09 17:35:32</td>   <td>-514</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase2.setUp(java.lang.String)[pri:0, instance:tests.MyAccountPT@1b1426f4]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1450652220</td>   <td></td> </tr>
+<tr bgcolor="d88769">  <td>21/09/09 17:35:33</td>   <td>-7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyAccountPT.RegisteredUserCanLogin()[pri:4, instance:tests.MyAccountPT@1b1426f4]">RegisteredUserCanLogin</td> 
+  <td>main@1450652220</td>   <td></td> </tr>
 </table>
